Added readme and full gesture recognition. * and / gestures are ++ and -- respectively

--- a/README
+++ b/README
@@ -20,3 +20,5 @@ Gesture calculator
 Умножение и деление - 2 плюса и 2 минуса подряд
 равно - палец вверх
 удалить символ - два пальца влево
+
+Статус проекта - распознование жестов готово, однако вывод в консоль
