Updated readme, requirements.txt, changed gesture for 'equals', added video example of use

--- a/README
+++ b/README
@@ -17,8 +17,25 @@ Gesture calculator
 Цифры - показывайте в камеру необходимое число пальцев, для 0 показывайте 10 пальцев, важно чтобы ладони были разернуты в камеру
 Минус - 1 палец вбок
 Плюс - покажите 1 палец вверх и один палец вбок на разных руках,
-Умножение и деление - 2 плюса и 2 минуса подряд
-равно - палец вверх
-удалить символ - два пальца влево
+Умножение и деление - 2 плюса и 2 минуса подряд соответственно
+равно - три пальца в сторону
+удалить символ - два пальца в сторону
 
-Статус проекта - распознование жестов готово, однако вывод в консоль
+Настройка - в файле Config.py есть следующие константы:
+
+GESTURE_CONFIDENCE - количество раз, которое система должна распознать
+один и тот же жест подряд чтобы жест считался именно таким а не случайным распознаванием другого
+
+TIMER - задержка после успешного распознавания одного жеста
+до начала попыток распознать следующий
+
+CAMERA_ID - системный идентификатор устройства видеоввода. Если вы используете
+технологию "Continuity camera" установите значение 1
+
+Система может некорректно работать на OS, отличных от Windows 10,
+из-за особенностей
+
+Примеры использования -
+
+
+Статус проекта - Требуется портирование на другие системы
